# SurvivalCraft

./: CMakeLists.txt  CMakePresets.json  glad.c
Assets/SurvivalCraft/Shader/: DefaultFragment.glsl  DefaultVertex.glsl
SurvivalCraft/: SurvivalCraft.cpp
SurvivalCraft/Include/Core/: InputManager.hpp  Logger.hpp  Settings.hpp  SurvivalCraft.hpp  Window.hpp
SurvivalCraft/Include/Entity/: EntityPlayer.hpp
SurvivalCraft/Include/Event/: EventSystem.hpp
SurvivalCraft/Include/Math/: Transform.hpp
SurvivalCraft/Include/Render/: Camera.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  TextureManager.hpp
SurvivalCraft/Include/Util/: FileHelper.hpp  Formatter.hpp
